# CMakeSeries

./: README.md
Ep002/: CMakeLists.txt
Ep002/src/: main.cpp
Ep005/: CMakeLists.txt
Ep005/src/: main.cpp
Ep007 - Double Library Target/: CMakeLists.txt
Ep007 - Double Library Target/logger/src/: log.cpp
Ep007 - Double Library Target/src/: main.cpp
Ep007 - Single Library Target/: CMakeLists.txt
Ep007 - Single Library Target/include/: log.h
Ep007 - Single Target/: CMakeLists.txt
Ep007 - Single Target/src/: main.cpp
